# openclaw_memory_fabric

./: .gitignore  CHANGELOG.md  OpenClaw_Memory_Fabric_优化设计文档_v0_2.md  OpenClaw_Memory_Fabric_优化设计文档_v0_3.md  README.md  ocmaf  pyproject.toml
.specify/memory/: constitution.md
docs/: analysis.md  auto_memory_behavior.md  checklist.md  plan.md  quickstart.md  spec.md
ops/: adapter_smoke.sh  adapter_test.py  integrated_gate.sh  rollback.md  verify_smoke.sh
runs/002-adapter-integration/: evidence.md
runs/003-codex-adapter/: evidence.md
runs/003-p0-core-fix/: evidence.md
runs/004-codex-fix/: evidence.md
runs/004-p0-1-fix/: evidence.md
runs/005-hermetic-fix/: evidence.md
runs/006-openclaw-mvp/: evidence.md
runs/007-e2e-validation/: evidence.md  known_limits.md
runs/008-real-host-validation/: entry_claude_code.md  entry_codex_cli.md  entry_openclaw.md  evidence.md  known_limits.md
runs/009-real-host-evidence-repair/: binary_check.md  claude_real_host_status.md  claude_strict_real_host.md  codex_strict_real_host.md  cross_tool_strict.md  evidence.md  known_limits.md
runs/010-strict-real-host-repair/: binary_check.md  claude_strict_real_host.md  codex_strict_real_host.md  cross_tool_strict.md  evidence.md  known_limits.md
runs/011-minimal-real-host-bridge/: binary_check.md  claude_strict_real_host.md  codex_strict_real_host.md  cross_tool_strict.md  evidence.md  (+1 more)
tasks/: tasks.json  tasks.md
tests/: test_codex_adapter.py  test_cross_tool_integration.py  test_e2e_fallback.py  test_openclaw_adapter.py  test_p0_regression.py  test_tri_tool_integration.py
(+291 files in other folders)
